--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -1,5 +1,7 @@
 %p= comment.comment
 
-%p= link_to  'Destroy Comment', [comment.recipe, comment], method: :delete, data: { confirm: 'Are you sure?' }
+-if current_user.id = 1 
+
+	%p= link_to  'Destroy Comment', [comment.recipe, comment], method: :delete, data: { confirm: 'Are you sure?' }
 
 %hr
