--- a/app/views/recipes/show.html.haml
+++ b/app/views/recipes/show.html.haml
@@ -9,8 +9,11 @@
 %p= @recipe.procedure
 
 %p= link_to 'Back', recipes_path
-%p= link_to 'Edit', edit_recipe_path(@recipe)
-%p= link_to 'Delete', recipe_path(@recipe), method: :delete, data: { confirm: 'Are you sure you want to delete this recipe?' }
+
+-if current_user.id = @recipe.user_id 
+
+	%p= link_to 'Edit', edit_recipe_path(@recipe)
+	%p= link_to 'Delete', recipe_path(@recipe), method: :delete, data: { confirm: 'Are you sure you want to delete this recipe?' }
 
 = render @recipe.comments
 
