--- a/app/views/recipes/show.html.haml
+++ b/app/views/recipes/show.html.haml
@@ -1,16 +1,22 @@
 %h2 Here is your Recipe!
 
+%img= image_tag @recipe.avatar.url
+
 %h1= @recipe.name
+
+%p= @recipe.user.email
 
 %p= @recipe.preparation_time
 
-%p= @recipe.ingredients
+- @list_of_ingredients.each do |ingredient|
+	
+	%p= "- #{ingredient}"
 
 %p= @recipe.procedure
 
 %p= link_to 'Back', recipes_path
 
--if current_user.id = @recipe.user_id 
+-if current_user.id == @recipe.user_id 
 
 	%p= link_to 'Edit', edit_recipe_path(@recipe)
 	%p= link_to 'Delete', recipe_path(@recipe), method: :delete, data: { confirm: 'Are you sure you want to delete this recipe?' }
