--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,1 +1,8 @@
-%h1 Hello Rails
+%h1 Spuntino
+
+
+-if user_signed_in?
+	%p= link_to 'Logout', destroy_user_session_path, :method => :delete
+-else
+	%p= link_to 'Login', new_user_session_path
+
