starting with css

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,30 @@
  *= require_tree .
  *= require_self
  */
+
+ body {
+ 	margin: 0 auto;
+ 	font-family: 'Raleway', sans-serif;
+ 	font-size: 18px;
+ }
+
+ .content {
+ 	width: 80%;
+ 	margin-left: 10%;
+ }
+
+.content > a {
+ 	text-decoration: none;
+ 	color: #000;
+ 	float: left;
+ 	margin-right: 10px;
+ }
+
+.content > a:hover {
+ 	border-bottom: 2px solid #000;
+ }
+
+ .clear {
+ 	clear: left;
+ 	margin-top: 40px;
+ }
