--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,94 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.home {
+	width: 100%;
+	img {
+	width: 100%;
+	}
+}
+
+.logo {
+	z-index: 9999;
+	margin-top: -900px;
+	margin-left: 6%;
+	img {
+		width: 50%;
+	}
+}
+
+.log_in_form {
+	font-size: 16px;
+	width: 400px;
+	color: white;
+
+	a:visited {
+		color: #fff;
+		text-decoration: none;
+	}
+
+	a {
+		text-decoration: none;
+		color: #fff;
+	}
+
+	a:hover {
+		border-bottom: 2px solid #fff;
+	}
+
+	.btn_home {
+	 	font-size: 24px;
+	 	color: #fff;
+	 	display: inline;
+	 	margin-right: 50px;
+	 }
+
+	input{
+		color: #fff;
+		border: none;
+		border-bottom: 2px solid #fff;
+		background-color: transparent;
+		font-size: 18px;
+		margin-bottom: 10px;
+	}
+
+	input:focus {
+		outline: none;
+		border-bottom: 4px solid #fff;
+		font-size: 26px;
+		background: rgba(256,256,256,0.2);
+		padding: 5px;
+	}
+	
+	.home_field {
+		width: 100%;
+	}
+
+}
+
+.sign_up {
+	margin-top: 200px;
+
+		input{
+		color: #000;
+		border: none;
+		border-bottom: 2px solid #000;
+		background-color: transparent;
+		font-size: 18px;
+		margin-bottom: 10px;
+	}
+
+	input:focus {
+		outline: none;
+		border-bottom: 4px solid #000;
+		font-size: 26px;
+		background: rgba(0,0,0,0.2);
+		padding: 5px;
+	}
+
+	.field {
+		width: 100%;
+	}
+
+}
