--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,11 +1,13 @@
-<h2>Sign up</h2>
+<div class="content sign_up">
+
+<h2>Create a new Account</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+    <%= f.email_field :email, autofocus: true, :class => "field" %>
   </div>
 
   <div class="field">
@@ -13,12 +15,12 @@
     <% if @validatable %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
+    <%= f.password_field :password, autocomplete: "off", :class => "field" %>
   </div>
 
   <div class="field">
     <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    <%= f.password_field :password_confirmation, autocomplete: "off", :class => "field" %>
   </div>
 
   <div class="actions">
@@ -26,4 +28,6 @@
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<%= link_to "Back", :back, :class => "btn_home" %>
+
+ </div>
