--- a/app/views/recipes/show.html.haml
+++ b/app/views/recipes/show.html.haml
@@ -1,28 +1,51 @@
-%h2 Here is your Recipe!
+.top_recipe
+	%img= image_tag @recipe.avatar.url
 
-%img= image_tag @recipe.avatar.url
+.content
+	.recipe_content
 
-%h1= @recipe.name
+		%h1= @recipe.name
 
-%p= @recipe.user.email
+		.recipe_content_background
 
-%p= @recipe.preparation_time
+			.ingredients
 
-- @list_of_ingredients.each do |ingredient|
-	
-	%p= "- #{ingredient}"
+				%h2 Ingredients:
 
-%p= @recipe.procedure
+				- @list_of_ingredients.each do |ingredient|
+					
+					%p= "- #{ingredient}"
 
-%p= link_to 'Back', recipes_path
+			.preparation
 
--if current_user.id == @recipe.user_id 
+				%p= "time: #{@recipe.preparation_time} min"
 
-	%p= link_to 'Edit', edit_recipe_path(@recipe)
-	%p= link_to 'Delete', recipe_path(@recipe), method: :delete, data: { confirm: 'Are you sure you want to delete this recipe?' }
+				%p= link_to "chef: #{@recipe.user.email}", user_path(@recipe.user_id)
 
-= render @recipe.comments
+				%hr.clear
 
-%h2 Add a comment:
- 
-= render 'comments/form'
+				%h2 Preparation:	
+
+				- @preparation_phases.each do |phase|
+
+					%p= phase
+
+			.clear	
+
+			%a= link_to 'Back', recipes_path
+
+			-if current_user.id == @recipe.user_id 
+
+				%a= link_to 'Edit', edit_recipe_path(@recipe)
+				%a= link_to 'Delete', recipe_path(@recipe), method: :delete, data: { confirm: 'Are you sure you want to delete this recipe?' }
+
+			%hr.clear
+
+			- if @recipe.comments.any?
+				%h2 Comments:
+
+				= render @recipe.comments
+
+			%h2 Add a comment:
+			 
+			= render 'comments/form'
