--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,7 +1,8 @@
-%h1 Listing all users
+.content
+	%h1 Listing all users
 
-- @users.each do |user|
+	- @users.each do |user|
 
-	%h2= user.email
-	%p= link_to 'Show', user_path(user)
-	%hr
+		%h2= user.email
+		%a= link_to 'Show', user_path(user)
+		%hr.clear
