--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,5 +1,7 @@
-=form_for @user do |f|
-	
-	%p= f.file_field :avatar
+.user_form
 
-	%p= f.submit
+	=form_for @user do |f|
+		
+		%p= f.file_field :avatar
+
+		%p= f.submit
